# software-engineering-gamify

./: .editorconfig  .env.example  .pre-commit-config.yaml  .wakatime-project  README.md  mkdocs.yml  pyproject.toml
.github/: copilot-instructions.md
.github/actions/setup-python-env/: action.yml
.github/actions/workflows/: pre-commit.yml
docs/: CI_INVENTORY.md  DEPLOYMENT_GUIDE.md  README.md  index.md
docs/design/: C4.drawio  README.md  design_documentation.md
docs/design/diagrams/: deploy_diagram.drawio  diagrama_contexto.drawio  diagrama_dominio.drawio  domain_diagram.drawio  gamification_service_components_diagram.md  sequence_diagram.drawio  use_cases_diagram.drawio
docs/design/diagrams/c4/: C4.drawio  class_diagram_backend.drawio
docs/inventory/: README.md
docs/practical_work/: TP1_part1_architecture.md  TP1_part2_apply_architecture.md  TP2_sequence_diagram.md  TP3_class_deployment_diagrams.md  TP4_test_cases_design.md
docs/requirements/: README.md  atributos_calidad.xlsx  casos_uso.xlsx  functional_requirements.xlsx  test_cases.xlsx
docs/specifications/: README.md  TP_final_IS_1.docx
resources/: README.md
src/: DEMO_CHECKLIST.md  DEMO_README.md  DEMO_SCRIPT.md  DEMO_SUMMARY.md  README.md  demo_app.py  demo_config.py  manage.py  start_demo.bat
src/DEMO/: README.md  __init__.py  check_demo.py  demo_app.py
src/DEMO/static/: styles.css
src/DEMO/templates/: index.html
src/apps/achievements/: __init__.py  admin.py  apps.py
src/apps/achievements/api/: __init__.py  urls.py  views.py
src/apps/achievements/events/: __init__.py  handlers.py  publishers.py
src/apps/achievements/management/commands/: __init__.py  create_sample_achievements.py  create_test_user_stats.py  simulate_task_completion.py
src/apps/achievements/managers/: achievement_manager.py
src/apps/achievements/migrations/: 0001_initial.py
src/apps/achievements/models/: __init__.py  achievement.py  managers.py  user_achievement.py
src/apps/achievements/serializers/: __init__.py
src/apps/achievements/services/: achievement_evaluator.py  achievement_service.py  task_simulation_service.py
src/apps/achievements/services/validators/: __init__.py  base.py  level_validator.py  streak_validator.py  task_count_validator.py
src/apps/achievements/tests/: README.md  __init__.py  conftest.py  test_evaluator.py  test_managers.py  test_models.py  test_serializers.py  test_services.py  test_validators.py  test_views.py
src/apps/achievements/utils/: __init__.py  notification_sender.py  validators.py
src/apps/challenges/: apps.py
src/apps/challenges/api/: urls.py
src/apps/rankings/api/: urls.py
src/apps/rewards/: apps.py
src/apps/rewards/api/: urls.py
src/apps/streaks/: apps.py
src/apps/streaks/api/: urls.py
src/apps/tasks/api/: urls.py
src/apps/users/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
src/apps/users/api/: serializers.py  urls.py  views.py
src/apps/users/migrations/: 0001_initial.py
src/apps/users/serializers/: __init__.py
src/apps/users/tests/: factories.py  test_admin.py  test_forms.py  test_models.py  test_tasks.py  test_urls.py  test_views.py
src/apps/users/tests/api/: test_urls.py  test_views.py
src/apps/xp_management/: __init__.py  apps.py
src/apps/xp_management/api/: urls.py
src/config/: __init__.py  api_router.py  asgi.py  celery_app.py  urls.py  websocket.py  wsgi.py
src/config/settings/: base.py  local.py  production.py  test.py
src/gamify/: __init__.py
src/templates/: index.html
tests/: README.md  __init__.py
