[project]
name = "gamify"
version = "1.0.0"
description = "Gamify is a web and mobile application designed to help people organize their daily tasks in a motivating way."
authors = [
    { name = "Caupolicán Ré", email = "caupolicanre@gmail.com" },
    { name = "Felipe Carrozzo", email = "felipe.carrozzo@ingenieria.uner.edu.ar" },
]
readme = "README.md"
keywords = ["python", "gamification", "task management"]
requires-python = "==3.13.5"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
]
dependencies = [
    "argon2-cffi>=25.1.0",
    "celery==5.5.3",
    "django==5.2.7",
    "django-cors-headers==4.9.0",
    "django-filter==25.2",
    "django-redis==6.0.0",
    "djangorestframework==3.16.1",
    "drf-spectacular==0.29.0",
    "flask>=3.1.2",
    "pika==1.3.2",
    "psycopg[binary]==3.2.12",
    "python-decouple==3.8",
    "redis==7.0.1",
    "requests>=2.32.5",
]

[project.urls]
Homepage = "https://caupolicanre.github.io/gamify/"
Repository = "https://github.com/caupolicanre/gamify/"
Documentation = "https://caupolicanre.github.io/gamify/"

[dependency-groups]
dev = [
    "deptry==0.23.1",
    "mkdocs==1.6.1",
    "pre-commit==4.2.0",
    "pytest==8.4.2",
    "pytest-cookies==0.2.0",
    "pytest-cov==7.0.0",
    "pytest-django==4.11.1",
    "ruff==0.12.8",
    "ty==0.0.1a17",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.ty.environment]
python = "./.venv"


[tool.ruff]
indent-width = 4
line-length = 140

[tool.ruff.format]
indent-style = "space"
quote-style = "double"

[tool.ruff.lint]
extend-select = [
    # flake8
    "ANN",      # Annotations
    "ASYNC",    # Async
    "S",        # Security
    "BLE",      # Blind Exception
    "FBT",      # Boolean Trap
    "B",        # Bugbear
    "A",        # Builtins
    "COM",      # Commas
    "C4",       # Comprehensions
    "DTZ",      # DateTime Zone
    "T10",      # Debugger
    "DJ",       # Django
    "EM",       # Error Messages
    "FIX",      # Fix Me
    "INT",      # gettext
    "ISC",      # Implicit str Concat
    "ICN",      # Import Conventions
    "LOG",      # Logging
    "G",        # Logging Format
    "INP",      # No PEP 420
    "PIE",      # Miscellaneous Lints
    "T20",      # Print
    "PYI",      # Type Hinting Specializations
    "PT",       # Pytest Style
    "Q",        # Quotes
    "RSE",      # Raise
    "RET",      # Return
    "SLF",      # Self
    "SIM",      # Simplify
    "SLOT",     # Slots
    "TID",      # Tidier Imports
    "TD",       # TODOs
    "TC",       # Type Checking
    "ARG",      # Unused Arguments
    "PTH",      # Use Pathlib

    # Flynt
    "FLY",      # Replace string formatting with f-strings

    # isort
    "I",        # Imports

    # mccabe
    "C90",      # Complex Structure

    # NumPy
    "NPY",

    # Pandas
    "PD",

    # PEP 8
    "N",        # Naming

    # Perflint
    "PERF",     # Performance

    # pycodestyle
    "E",        # Error
    "W",        # Warning

    # pydoclint
    # "DOC",      # Docstring

    # pydocstyle
    "D",        # Docstring

    # Pyflakes
    "F",

    # Pylint
    "PL",       # PyLint
    #"PLC",     # Convention
    #"PLE",     # Error
    #"PLR",     # Refactor
    #"PLW",     # Warning

    # pyupgrade
    "UP",

    # refurb
    "FURB",     # Refurbish

    # Ruff
    "RUF",

    # tryceratops
    "TRY",      # Prevent Exception Handling AntiPatterns
]
ignore = [
    # flake8
    "S101",     # assert

    # Annotations
    "ANN002",   # missing-type-args
    "ANN003",   # missing-type-kwargs

    # Boolean Trap
    "FBT001",   # Boolean-typed positional argument in function definition

    # Print
    "T201",     # Print statements

    # TODO
    "TD001",    # Invalid TODO tag
    "TD002",    # Missing author in TODO
    "TD003",    # Missing issue link for this TODO

    # pydocstyle
    "D100",     # Missing docstring in public module
    "D106",     # undocumented-public-nested-class
    "D212",     # Multi-line docstring summary should start at the first line
    "D413",

    # Ruff
    "RUF012",
]
typing-extensions = false
logger-objects = []

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.flake8-import-conventions]
banned-from = []

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "double"
multiline-quotes = "double"

[tool.ruff.lint.flake8-unused-arguments]
ignore-variadic-names = true

[tool.ruff.lint.pycodestyle]
ignore-overlong-task-comments = true

[tool.ruff.lint.isort]
lines-after-imports = 2
known-first-party = ["apps", "config"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.lint.per-file-ignores]
"*/tests/*" = [
    "ANN",      # No type hints in tests
    "S",        # Security not critical in tests
    "D",        # No docstrings in tests
    "PLR2004",  # Magic values OK in tests
]
"*/migrations/*" = ["ALL"]
"manage.py" = ["INP001"]
"*/settings/*" = ["F405"]
